--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = mongodb+srv://sembatya:Alma%402024@cluster0.9bz8aes.mongodb.net/
+MONGODB_URL = mongodb+srv://sembatya:Alma%402024@cluster0.9bz8aes.mongodb.net/project1
